axum-macros/tests/debug_handler/fail/argument_not_extractor.stderr
error[E0277]: the trait bound `bool: FromRequestParts<()>` is not satisfied
 --> tests/debug_handler/fail/argument_not_extractor.rs:4:24
  |
4 | async fn handler(_foo: bool) {}
  |                        ^^^^ the trait `FromRequestParts<()>` is not implemented for `bool`
  |
  = note: Function argument is not a valid axum extractor.
          See `https://docs.rs/axum/latest/axum/extract/index.html` for details
  = help: the following other types implement trait `FromRequestParts<S>`:
            <HeaderMap as FromRequestParts<S>>
            <Extension<T> as FromRequestParts<S>>
            <Method as FromRequestParts<S>>
            <Uri as FromRequestParts<S>>
            <Version as FromRequestParts<S>>
            <ConnectInfo<T> as FromRequestParts<S>>
            <axum::extract::Path<T> as FromRequestParts<S>>
            <RawPathParams as FromRequestParts<S>>
          and $N others
  = note: required for `bool` to implement `FromRequest<(), axum_core::extract::private::ViaParts>`
note: required by a bound in `__axum_macros_check_handler_0_from_request_check`
 --> tests/debug_handler/fail/argument_not_extractor.rs:4:24
  |
4 | async fn handler(_foo: bool) {}
  |                        ^^^^ required by this bound in `__axum_macros_check_handler_0_from_request_check`
